Add SecuritySchemes annotation
